# db/query.sql.go
@@ -236,6 +236,117 @@ func (q *Queries) DoesInboundActivityExist(ctx context.Context, arg DoesInboundA
 	return count, err
 }
 
+const fixUnfinishedStreams = `-- name: FixUnfinishedStreams :exec
+UPDATE streams SET end_time = (SELECT MAX(timestamp) FROM video_segments WHERE stream_id = streams.id) WHERE end_time IS NULL
+`
+
+func (q *Queries) FixUnfinishedStreams(ctx context.Context) error {
+	_, err := q.db.ExecContext(ctx, fixUnfinishedStreams)
+	return err
+}
+
+const getAllClips = `-- name: GetAllClips :many
+SELECT rc.id AS id, rc.clip_title, rc.stream_id, rc.relative_start_time, rc.relative_end_time, (rc.relative_end_time - rc.relative_start_time) AS duration_seconds, rc.timestamp, s.stream_title AS stream_title
+	FROM replay_clips rc
+	JOIN streams s ON rc.stream_id = s.id
+	ORDER BY rc.timestamp DESC
+`
+
+type GetAllClipsRow struct {
+	ID                string
+	ClipTitle         sql.NullString
+	StreamID          string
+	RelativeStartTime sql.NullFloat64
+	RelativeEndTime   sql.NullFloat64
+	DurationSeconds   interface{}
+	Timestamp         sql.NullTime
+	StreamTitle       sql.NullString
+}
+
+func (q *Queries) GetAllClips(ctx context.Context) ([]GetAllClipsRow, error) {
+	rows, err := q.db.QueryContext(ctx, getAllClips)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetAllClipsRow
+	for rows.Next() {
+		var i GetAllClipsRow
+		if err := rows.Scan(
+			&i.ID,
+			&i.ClipTitle,
+			&i.StreamID,
+			&i.RelativeStartTime,
+			&i.RelativeEndTime,
+			&i.DurationSeconds,
+			&i.Timestamp,
+			&i.StreamTitle,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getAllClipsForStream = `-- name: GetAllClipsForStream :many
+SELECT rc.id AS clip_id, rc.stream_id, rc.clipped_by, rc.clip_title, rc.relative_start_time, rc.relative_end_time, rc.timestamp,
+	s.stream_title AS stream_title
+	FROM replay_clips rc
+	JOIN streams s ON rc.stream_id = s.id
+	WHERE rc.stream_id = ?
+	ORDER BY rc.timestamp DESC
+`
+
+type GetAllClipsForStreamRow struct {
+	ClipID            string
+	StreamID          string
+	ClippedBy         sql.NullString
+	ClipTitle         sql.NullString
+	RelativeStartTime sql.NullFloat64
+	RelativeEndTime   sql.NullFloat64
+	Timestamp         sql.NullTime
+	StreamTitle       sql.NullString
+}
+
+func (q *Queries) GetAllClipsForStream(ctx context.Context, streamID string) ([]GetAllClipsForStreamRow, error) {
+	rows, err := q.db.QueryContext(ctx, getAllClipsForStream, streamID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetAllClipsForStreamRow
+	for rows.Next() {
+		var i GetAllClipsForStreamRow
+		if err := rows.Scan(
+			&i.ClipID,
+			&i.StreamID,
+			&i.ClippedBy,
+			&i.ClipTitle,
+			&i.RelativeStartTime,
+			&i.RelativeEndTime,
+			&i.Timestamp,
+			&i.StreamTitle,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
 const getApprovedDirectoryFollowers = `-- name: GetApprovedDirectoryFollowers :many
 SELECT iri, inbox, shared_inbox, name, username, image, created_at FROM ap_followers WHERE approved_at IS NOT NULL AND disabled_at IS NULL AND directory IS 1 ORDER BY created_at DESC
 `
@@ -281,6 +392,35 @@ func (q *Queries) GetApprovedDirectoryFollowers(ctx context.Context) ([]GetAppro
 		return nil, err
 	}
 	return items, nil
+}
+
+const getClip = `-- name: GetClip :one
+SELECT id AS clip_id, stream_id, clipped_by, clip_title, timestamp AS clip_timestamp, relative_start_time, relative_end_time FROM replay_clips WHERE id = ?
+`
+
+type GetClipRow struct {
+	ClipID            string
+	StreamID          string
+	ClippedBy         sql.NullString
+	ClipTitle         sql.NullString
+	ClipTimestamp     sql.NullTime
+	RelativeStartTime sql.NullFloat64
+	RelativeEndTime   sql.NullFloat64
+}
+
+func (q *Queries) GetClip(ctx context.Context, id string) (GetClipRow, error) {
+	row := q.db.QueryRowContext(ctx, getClip, id)
+	var i GetClipRow
+	err := row.Scan(
+		&i.ClipID,
+		&i.StreamID,
+		&i.ClippedBy,
+		&i.ClipTitle,
+		&i.ClipTimestamp,
+		&i.RelativeStartTime,
+		&i.RelativeEndTime,
+	)
+	return i, err
 }
 
 const getFederatedServer = `-- name: GetFederatedServer :one
@@ -465,6 +605,24 @@ func (q *Queries) GetFederationFollowersWithOffset(ctx context.Context, arg GetF
 		return nil, err
 	}
 	return items, nil
+}
+
+const getFinalSegmentForStream = `-- name: GetFinalSegmentForStream :one
+SELECT id, stream_id, output_configuration_id, path, relative_timestamp, timestamp FROM video_segments WHERE stream_id = ? ORDER BY relative_timestamp DESC LIMIT 1
+`
+
+func (q *Queries) GetFinalSegmentForStream(ctx context.Context, streamID string) (VideoSegment, error) {
+	row := q.db.QueryRowContext(ctx, getFinalSegmentForStream, streamID)
+	var i VideoSegment
+	err := row.Scan(
+		&i.ID,
+		&i.StreamID,
+		&i.OutputConfigurationID,
+		&i.Path,
+		&i.RelativeTimestamp,
+		&i.Timestamp,
+	)
+	return i, err
 }
 
 const getFollowerByIRI = `-- name: GetFollowerByIRI :one
@@ -781,6 +939,88 @@ func (q *Queries) GetOutboxWithOffset(ctx context.Context, arg GetOutboxWithOffs
 	return items, nil
 }
 
+const getOutputConfigurationForId = `-- name: GetOutputConfigurationForId :one
+SELECT id, stream_id, variant_id, name, segment_duration, bitrate, framerate, resolution_width, resolution_height FROM video_segment_output_configuration WHERE id = ?
+`
+
+type GetOutputConfigurationForIdRow struct {
+	ID               string
+	StreamID         string
+	VariantID        string
+	Name             string
+	SegmentDuration  int64
+	Bitrate          int64
+	Framerate        int64
+	ResolutionWidth  sql.NullInt64
+	ResolutionHeight sql.NullInt64
+}
+
+func (q *Queries) GetOutputConfigurationForId(ctx context.Context, id string) (GetOutputConfigurationForIdRow, error) {
+	row := q.db.QueryRowContext(ctx, getOutputConfigurationForId, id)
+	var i GetOutputConfigurationForIdRow
+	err := row.Scan(
+		&i.ID,
+		&i.StreamID,
+		&i.VariantID,
+		&i.Name,
+		&i.SegmentDuration,
+		&i.Bitrate,
+		&i.Framerate,
+		&i.ResolutionWidth,
+		&i.ResolutionHeight,
+	)
+	return i, err
+}
+
+const getOutputConfigurationsForStreamId = `-- name: GetOutputConfigurationsForStreamId :many
+SELECT id, stream_id, variant_id, name, segment_duration, bitrate, framerate, resolution_width, resolution_height FROM video_segment_output_configuration WHERE stream_id = ?
+`
+
+type GetOutputConfigurationsForStreamIdRow struct {
+	ID               string
+	StreamID         string
+	VariantID        string
+	Name             string
+	SegmentDuration  int64
+	Bitrate          int64
+	Framerate        int64
+	ResolutionWidth  sql.NullInt64
+	ResolutionHeight sql.NullInt64
+}
+
+func (q *Queries) GetOutputConfigurationsForStreamId(ctx context.Context, streamID string) ([]GetOutputConfigurationsForStreamIdRow, error) {
+	rows, err := q.db.QueryContext(ctx, getOutputConfigurationsForStreamId, streamID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetOutputConfigurationsForStreamIdRow
+	for rows.Next() {
+		var i GetOutputConfigurationsForStreamIdRow
+		if err := rows.Scan(
+			&i.ID,
+			&i.StreamID,
+			&i.VariantID,
+			&i.Name,
+			&i.SegmentDuration,
+			&i.Bitrate,
+			&i.Framerate,
+			&i.ResolutionWidth,
+			&i.ResolutionHeight,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
 const getPendingFeaturedFollowRequests = `-- name: GetPendingFeaturedFollowRequests :many
 SELECT iri, inbox, shared_inbox, name, username, image, created_at FROM ap_followers WHERE approved_at IS null AND disabled_at is null AND directory IS 1 ORDER BY created_at DESC
 `
@@ -905,6 +1145,137 @@ func (q *Queries) GetRejectedAndBlockedFollowers(ctx context.Context) ([]GetReje
 			&i.Image,
 			&i.CreatedAt,
 			&i.DisabledAt,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getSegmentsForOutputId = `-- name: GetSegmentsForOutputId :many
+SELECT id, stream_id, output_configuration_id, path, timestamp FROM video_segments WHERE output_configuration_id = ? ORDER BY timestamp ASC
+`
+
+type GetSegmentsForOutputIdRow struct {
+	ID                    string
+	StreamID              string
+	OutputConfigurationID string
+	Path                  string
+	Timestamp             sql.NullTime
+}
+
+func (q *Queries) GetSegmentsForOutputId(ctx context.Context, outputConfigurationID string) ([]GetSegmentsForOutputIdRow, error) {
+	rows, err := q.db.QueryContext(ctx, getSegmentsForOutputId, outputConfigurationID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetSegmentsForOutputIdRow
+	for rows.Next() {
+		var i GetSegmentsForOutputIdRow
+		if err := rows.Scan(
+			&i.ID,
+			&i.StreamID,
+			&i.OutputConfigurationID,
+			&i.Path,
+			&i.Timestamp,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getSegmentsForOutputIdAndWindow = `-- name: GetSegmentsForOutputIdAndWindow :many
+SELECT id, stream_id, output_configuration_id, path, relative_timestamp, timestamp FROM video_segments WHERE output_configuration_id = ?1 AND relative_timestamp >= ?2 AND relative_timestamp <= ?3 ORDER BY relative_timestamp ASC
+`
+
+type GetSegmentsForOutputIdAndWindowParams struct {
+	OutputConfigurationID string
+	StartSeconds          float64
+	EndSeconds            float64
+}
+
+func (q *Queries) GetSegmentsForOutputIdAndWindow(ctx context.Context, arg GetSegmentsForOutputIdAndWindowParams) ([]VideoSegment, error) {
+	rows, err := q.db.QueryContext(ctx, getSegmentsForOutputIdAndWindow, arg.OutputConfigurationID, arg.StartSeconds, arg.EndSeconds)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []VideoSegment
+	for rows.Next() {
+		var i VideoSegment
+		if err := rows.Scan(
+			&i.ID,
+			&i.StreamID,
+			&i.OutputConfigurationID,
+			&i.Path,
+			&i.RelativeTimestamp,
+			&i.Timestamp,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getStreamById = `-- name: GetStreamById :one
+SELECT id, stream_title, start_time, end_time FROM streams WHERE id = ? LIMIT 1
+`
+
+func (q *Queries) GetStreamById(ctx context.Context, id string) (Stream, error) {
+	row := q.db.QueryRowContext(ctx, getStreamById, id)
+	var i Stream
+	err := row.Scan(
+		&i.ID,
+		&i.StreamTitle,
+		&i.StartTime,
+		&i.EndTime,
+	)
+	return i, err
+}
+
+const getStreams = `-- name: GetStreams :many
+
+SELECT id, stream_title, start_time, end_time FROM streams ORDER BY start_time DESC
+`
+
+// Recording, replay and clip related queries.
+func (q *Queries) GetStreams(ctx context.Context) ([]Stream, error) {
+	rows, err := q.db.QueryContext(ctx, getStreams)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []Stream
+	for rows.Next() {
+		var i Stream
+		if err := rows.Scan(
+			&i.ID,
+			&i.StreamTitle,
+			&i.StartTime,
+			&i.EndTime,
 		); err != nil {
 			return nil, err
 		}
@@ -1145,6 +1516,110 @@ func (q *Queries) GetUsers(ctx context.Context) ([]GetUsersRow, error) {
 	return items, nil
 }
 
+const insertClip = `-- name: InsertClip :exec
+INSERT INTO replay_clips (id, stream_id, clip_title, relative_start_time, relative_end_time, timestamp) VALUES(?, ?, ?, ?, ?, ?)
+`
+
+type InsertClipParams struct {
+	ID                string
+	StreamID          string
+	ClipTitle         sql.NullString
+	RelativeStartTime sql.NullFloat64
+	RelativeEndTime   sql.NullFloat64
+	Timestamp         sql.NullTime
+}
+
+func (q *Queries) InsertClip(ctx context.Context, arg InsertClipParams) error {
+	_, err := q.db.ExecContext(ctx, insertClip,
+		arg.ID,
+		arg.StreamID,
+		arg.ClipTitle,
+		arg.RelativeStartTime,
+		arg.RelativeEndTime,
+		arg.Timestamp,
+	)
+	return err
+}
+
+const insertOutputConfiguration = `-- name: InsertOutputConfiguration :exec
+INSERT INTO video_segment_output_configuration (id, variant_id, stream_id, name, segment_duration, bitrate, framerate, resolution_width, resolution_height, timestamp) VALUES(?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+`
+
+type InsertOutputConfigurationParams struct {
+	ID               string
+	VariantID        string
+	StreamID         string
+	Name             string
+	SegmentDuration  int64
+	Bitrate          int64
+	Framerate        int64
+	ResolutionWidth  sql.NullInt64
+	ResolutionHeight sql.NullInt64
+	Timestamp        sql.NullTime
+}
+
+func (q *Queries) InsertOutputConfiguration(ctx context.Context, arg InsertOutputConfigurationParams) error {
+	_, err := q.db.ExecContext(ctx, insertOutputConfiguration,
+		arg.ID,
+		arg.VariantID,
+		arg.StreamID,
+		arg.Name,
+		arg.SegmentDuration,
+		arg.Bitrate,
+		arg.Framerate,
+		arg.ResolutionWidth,
+		arg.ResolutionHeight,
+		arg.Timestamp,
+	)
+	return err
+}
+
+const insertSegment = `-- name: InsertSegment :exec
+INSERT INTO video_segments (id, stream_id, output_configuration_id, path, relative_timestamp, timestamp) VALUES(?, ?, ?, ?, ?, ?)
+`
+
+type InsertSegmentParams struct {
+	ID                    string
+	StreamID              string
+	OutputConfigurationID string
+	Path                  string
+	RelativeTimestamp     float64
+	Timestamp             sql.NullTime
+}
+
+func (q *Queries) InsertSegment(ctx context.Context, arg InsertSegmentParams) error {
+	_, err := q.db.ExecContext(ctx, insertSegment,
+		arg.ID,
+		arg.StreamID,
+		arg.OutputConfigurationID,
+		arg.Path,
+		arg.RelativeTimestamp,
+		arg.Timestamp,
+	)
+	return err
+}
+
+const insertStream = `-- name: InsertStream :exec
+INSERT INTO streams (id, stream_title, start_time, end_time) VALUES(?, ?, ?, ?)
+`
+
+type InsertStreamParams struct {
+	ID          string
+	StreamTitle sql.NullString
+	StartTime   sql.NullTime
+	EndTime     sql.NullTime
+}
+
+func (q *Queries) InsertStream(ctx context.Context, arg InsertStreamParams) error {
+	_, err := q.db.ExecContext(ctx, insertStream,
+		arg.ID,
+		arg.StreamTitle,
+		arg.StartTime,
+		arg.EndTime,
+	)
+	return err
+}
+
 const isDisplayNameAvailable = `-- name: IsDisplayNameAvailable :one
 SELECT count(*) FROM users WHERE display_name = ? AND ( type='API' OR authenticated_at IS NOT NULL ) AND disabled_at IS NULL
 `
@@ -1233,6 +1708,20 @@ type SetAccessTokenToOwnerParams struct {
 
 func (q *Queries) SetAccessTokenToOwner(ctx context.Context, arg SetAccessTokenToOwnerParams) error {
 	_, err := q.db.ExecContext(ctx, setAccessTokenToOwner, arg.UserID, arg.Token)
+	return err
+}
+
+const setStreamEnded = `-- name: SetStreamEnded :exec
+UPDATE streams SET end_time = ? WHERE id = ?
+`
+
+type SetStreamEndedParams struct {
+	EndTime sql.NullTime
+	ID      string
+}
+
+func (q *Queries) SetStreamEnded(ctx context.Context, arg SetStreamEndedParams) error {
+	_, err := q.db.ExecContext(ctx, setStreamEnded, arg.EndTime, arg.ID)
 	return err
 }
 
